<resources>
    <string name="app_name">Playlist maker</string>
    <string name="title" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддрежку</string>
    <string name="license">Пользовательское соглашение</string>
    <string name="message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="A_D_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="license_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email_adress">ice.king.13@yandex.ru</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте \nподключение к интеренету</string>
    <string name="no_find_error">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="saved_tracks">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="timing">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="_0_30">00:00</string>
    <string name="no_album">-</string>
</resources>