<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/ToolbarStyle"
        app:title="@string/settings" />


    <FrameLayout
        style="@style/SettingsOneLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsText"
            android:text="@string/dark_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:fontFamily="@font/ys_display_medium"
            app:thumbTint="?attr/colorOnSecondary"
            app:trackTint="?attr/trackColor"

            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout style="@style/SettingsOneLayoutStyle">

        <TextView
            style="@style/SettingsText"
            android:text="@string/share" />

        <ImageView
            android:id="@+id/settings_image"
            style="@style/SettingsImage"
            android:src="@drawable/share" />
    </FrameLayout>


    <FrameLayout style="@style/SettingsOneLayoutStyle">

        <TextView
            style="@style/SettingsText"
            android:text="@string/help" />

        <ImageView
            android:id="@+id/help_image"
            style="@style/SettingsImage"
            android:src="@drawable/help" />

    </FrameLayout>

    <FrameLayout style="@style/SettingsOneLayoutStyle">

        <TextView
            style="@style/SettingsText"
            android:text="@string/license" />

        <ImageView
            android:id="@+id/license_image"
            style="@style/SettingsImage"
            android:src="@drawable/license" />
    </FrameLayout>
</LinearLayout>