<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/title"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="40dp"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_marginEnd="@dimen/regular_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            style="@style/ButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/button_media"
            style="@style/ButtonStyle"
            android:text="@string/media"
            app:icon="@drawable/media" />

        <Button
            android:id="@+id/button_settings"
            style="@style/ButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/settings" />

    </LinearLayout>

</LinearLayout>